src/test/ui/issues/issue-17954.stderr
error[E0597]: borrowed value does not live long enough
  --> $DIR/issue-17954.rs:7:14
   |
LL |     let a = &FOO;
   |              ^^^ borrowed value does not live long enough
...
LL | }
   | - borrowed value only lives until here
   |
   = note: borrowed value must be valid for the static lifetime...

error: aborting due to previous error

For more information about this error, try `rustc --explain E0597`.
